--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/server.js server.js",
-    "dev": "npm install && nodemon src/server.ts",
-    "build": "tsc -p ."
+    "server": "nodemon src/server.ts",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "tsc -p .",
+    "client": "cd src/client && npm start"
   },
   "author": "",
   "license": "ISC",
