--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon src/server.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "tsc -p .",
-    "client": "cd src/client && npm start"
+    "client": "cd src/client && npm start",
+    "postinstall": ""
   },
   "author": "",
   "license": "ISC",
