--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
-    "@types/node": "^15.12.1"
+    "@types/node": "^15.12.1",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7"
   }
 }
